Fix header size issue on mobile

--- a/css/sass/layout.scss
+++ b/css/sass/layout.scss
@@ -198,6 +198,7 @@ header .text {
     padding-bottom: 0;
     padding-left: 30px;
     padding-right: 30px;
+    min-heigth: auto ! important;
   }
 }
 
